<resources>
    <string name="app_name">Rinzify</string>
    <string name="login_sign_up">Login / Sign Up</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="next">Next</string>
    <string name="or">OR</string>
    <string name="by_continuing_you_agree_to_our">By continuing, you agree to our</string>
    <string name="dotted_line_view">---------------------------- ---------------------- --------------------------</string>
    <string name="terms_of_services">Terms of Services</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="content_policies">Content Policies</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_you_received_to">Enter the OTP you received to</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="_91_7887777044">+91 7887777044</string>
    <string name="dotted_line_view_3">------------------------</string>
    <string name="dotted_line_view_2">---------------------</string>
    <string name="dotted_line_view_1">----------------------------</string>
    <string name="add_address">Add Address</string>
    <string name="home">Home</string>
    <string name="bookings">Bookings</string>
    <string name="my_schedule">My Schedule</string>
    <string name="e_shop">E-Shop</string>
    <string name="_24by7service">24by7service</string>
    <string name="give_a_friend">Give a friend promo code on \\u20B9150 and you\'ll\nget \\u20B9150 off your next services</string>
    <string name="give_a_friend_promo_code_on_u20b9150_and_you_ll_get_u20b9150_off_your_next_service">Give a friend promo code on ₹150 and you\'ll \nget ₹150 off your next service.</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="gbd21">GBD21</string>
    <string name="invite_a_friend_and_get_u20b9150">Invite a friend and get ₹150</string>
    <string name="location">location</string>
    <string name="vehicle">Vehicle</string>
    <string name="add">Add</string>
    <string name="address">Address</string>
    <string name="use_my_current_location">Use my current Location</string>
    <string name="saved_addresses">SAVED ADDRESSES</string>
    <string name="detail_address_fill_advice">" A detailed address will help our Service Partner reach your doorstep easily"</string>
    <string name="directions_to_reach">Directions To Reach</string>
    <string name="optional">(Optional)</string>
    <string name="tap_to_record_voice_directions">Tap to record voice directions</string>
    <string name="example">e.g. Ring the bell on red gate</string>
    <string name="save_as">Save As</string>
    <string name="other">Other</string>
    <string name="work">Work</string>
    <string name="change">Change</string>
    <string name="locate_me">Locate Me</string>
    <string name="add_location">Add Location</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>