<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:padding="16dp"
    app:cardBackgroundColor="@color/app_accent_color"
    app:cardCornerRadius="25dp"
    app:cardPreventCornerOverlap="true"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/imgRepairServices"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtInviteFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_a_friend_and_get_u20b9150"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtInviteDescription"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtInviteFriend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/give_a_friend_promo_code_on_u20b9150_and_you_ll_get_u20b9150_off_your_next_service"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCopyCode"
            android:text="@string/gbd21"
            android:background="@drawable/dotted_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="180dp"
            android:layout_height="50dp"/>

        <Button
            android:id="@+id/btnInviteFriends"
            android:backgroundTint="@color/text_color"
            android:text="@string/invite_friends"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="180dp"
            android:layout_height="50dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>