<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            app:titleTextColor="@color/white">

            <TextView
                android:id="@+id/txtAddress"
                android:text="@string/address"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollViewAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgLocation"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_address"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtMainAddressTitle"
                android:text="Sultan Nagar"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/text_color"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/imgLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtDetailAddress"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:textColor="@color/text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtMainAddressTitle"
                android:text="B123, Sultan Nagar, Gurjar Ki Tadi, Jaipur, Rajasthan, India"
                android:layout_width="280dp"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/txtAdvice"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="8dp"
                android:padding="5dp"
                android:textColor="@color/text_color"
                android:background="@drawable/accent_color_border_background"
                app:layout_constraintTop_toBottomOf="@id/txtDetailAddress"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/detail_address_fill_advice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtAddressLine1"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/txtAdvice"
                android:text="B123"
                android:textColor="@color/text_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtAddressLine2"
                android:layout_marginTop="16dp"
                android:textColor="@color/text_color"
                app:layout_constraintTop_toBottomOf="@id/edtAddressLine1"
                android:text="Sultan Nagar, Gurjar Ki Tadi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtDirectionToReach"
                android:layout_marginTop="16dp"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:text="@string/directions_to_reach"
                app:layout_constraintTop_toBottomOf="@id/edtAddressLine2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtOptional"
                android:layout_marginTop="16dp"
                android:textColor="@color/gray"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:text="@string/optional"
                app:layout_constraintTop_toBottomOf="@id/edtAddressLine2"
                app:layout_constraintStart_toEndOf="@id/txtDirectionToReach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/voiceLayout"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/txtOptional"
                android:background="@drawable/border_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtRecordInstructions"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textStyle="bold"
                    android:textColor="@color/text_color"
                    android:padding="16dp"
                    android:text="@string/tap_to_record_voice_directions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/imgVoiceRecord"
                    android:padding="16dp"
                    android:src="@drawable/ic_voice_record"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/edtInstructions"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:minHeight="135dp"
                android:gravity="start"
                android:textColor="@color/text_color"
                android:hint="@string/example"
                android:background="@drawable/border_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/voiceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txtSaveAs"
                app:layout_constraintTop_toBottomOf="@id/edtInstructions"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/save_as"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipHome"
                app:chipIcon="@drawable/ic_home"
                android:text="@string/home"
                app:chipBackgroundColor="@color/background_color"
                android:textColor="@color/text_color"
                app:chipCornerRadius="16dp"
                app:layout_constraintTop_toBottomOf="@id/txtSaveAs"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipOther"
                app:chipIcon="@drawable/ic_other"
                android:text="@string/other"
                app:chipBackgroundColor="@color/background_color"
                android:textColor="@color/text_color"
                app:chipCornerRadius="16dp"
                app:layout_constraintTop_toBottomOf="@id/txtSaveAs"
                app:layout_constraintStart_toEndOf="@id/chipHome"
                app:layout_constraintEnd_toStartOf="@id/chipWork"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipWork"
                app:chipIcon="@drawable/ic_work"
                android:text="@string/work"
                app:chipBackgroundColor="@color/background_color"
                android:textColor="@color/text_color"
                app:chipCornerRadius="16dp"
                app:layout_constraintTop_toBottomOf="@id/txtSaveAs"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnAddLocation"
                android:text="@string/add_location"
                android:layout_marginTop="16dp"
                android:textColor="@color/text_color"
                android:backgroundTint="@color/app_accent_color"
                app:layout_constraintTop_toBottomOf="@id/chipHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>